--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,14 @@
 body {
   font-family: Gill Sans, sans-serif;
   background-color: salmon;
-  text-align: center;
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.link{
+  display: flex;
+  width : 400px;
+  justify-content: space-around;
 }
